Fix sidebar header item alignments

--- a/src/app/portlets/dot-edit-page/layout/components/dot-edit-layout-sidebar/dot-edit-layout-sidebar.component.scss
+++ b/src/app/portlets/dot-edit-page/layout/components/dot-edit-layout-sidebar/dot-edit-layout-sidebar.component.scss
@@ -26,9 +26,5 @@ h6 {
     font-weight: normal;
     margin: 0;
     padding: $basic-padding * 2 - 4;
-    text-align: right;
-
-    &.dot-edit-layout-sidebar--right {
-        text-align: left;
-    }
+    text-align: left;
 }
